--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class="input-group mb-3">
           <input id="username" type="text" class="form-control" placeholder="Type in the hero's name" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
-            <button onclick="getHeroName() class="btn btn-outline-success my-2 my-sm-0"  type="button">SIGN!</button>
+            <button onclick="getHeroName()" class="btn btn-outline-success my-2 my-sm-0"  type="button">SIGN!</button>
           </div>
         </div>
       </div>
     </nav>
-    <canvas id="canvas" width="300" height="300"></canvas>
+    <canvas id="canvas"></canvas>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
