Met all the required features

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         </div>
       </div>
     </nav>
+    <h1 id="endGameNoti"></h1>
+    <h5 id="bestScore"></h5>
     <button id="startGameBtn" onclick="resetTimer();main();toggle_visibility();" type="button" class="btn btn-danger" style="display: block;">Click me to begin the SLAYING!!</button>
     <canvas id="canvas"></canvas>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
